--- a/hippolidays.csproj
+++ b/hippolidays.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Microsoft.EntityFrameworkCore.Proxies" />
+    <None Remove="Pages\Shared\Components\" />
+    <None Remove="Pages\Shared\Components\Calender\" />
+    <None Remove="ViewComponents\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" ExcludeFromSingleFile="true" />
@@ -35,5 +38,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Pages\Shared\Components\" />
+    <Folder Include="Pages\Shared\Components\Calendar\" />
+    <Folder Include="ViewComponents\" />
   </ItemGroup>
 </Project>
